--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL= ${DATABASE_URL}
+DATABASE_URL= postgresql://august:0-IkDYm8h0ITpO8aLzoBZQ@free-tier14.aws-us-east-1.cockroachlabs.cloud:26257/little-amoeba-1213.leaderboard
