--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@netlify/functions": "^0.11.0",
-    "@prisma/client": "^3.11.0",
+    "@prisma/client": "^3.12.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "netlify": "^11.0.1",
     "netlify-cli": "^8.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -47,7 +48,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "prisma": "^3.11.0",
+    "prisma": "^3.12.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
